@@ -3908,8 +3908,8 @@ sub handle_java
     }
 
     $output_rules .= ('class' . $dir . '.stamp: $(' . $dir . '_JAVA)' . "\n"
-		      . "\t" . '$(CLASSPATH_ENV) $(JAVAC) $(JAVACFLAGS) '
-		      . '-d $(JAVAROOT) $?' . "\n"
+		      . "\t" . '$(CLASSPATH_ENV) $(JAVAC) -d $(JAVAROOT) '
+		      . '$(JAVACFLAGS) $?' . "\n"
 		      . "\t" . 'echo timestamp > class' . $dir . '.stamp'
 		      . "\n");
     push (@all, 'class' . $dir . '.stamp');
